--- a/index.html
+++ b/index.html
@@ -5,29 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- <h3>Source element:</h3>
-<p class="source">
-  <style>
-    .source {
-      color: red;
-    }
-    .text {
-      text-transform: uppercase;
-    }
-  </style>
-  <span id="text">
-    Take a look at<br />
-    how this text<br />
-    is interpreted below.
-  </span>
-  <span style="display:none">HIDDEN TEXT</span>
-</p>
-<h3>Result of textContent:</h3>
-<textarea id="textContentOutput" rows="6" cols="30" readonly>…</textarea>
-<h3>Result of innerText:</h3>
-<textarea id="innerTextOutput" rows="6" cols="30" readonly>…</textarea> -->
+<div class="myclass">
+  <div class="div1"></div>
+</div>
 
     <script src="app.js"></script>
 
